<resources>
    <string name="app_name">FOOD UPIICSA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="food_upiicsa">FOOD UPIICSA</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido2">bienvenido:)</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="boleta">Boleta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario_registrado">¿Usuario Registrado?</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="comida_diaria">Comida Diaria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">my_cart</string>
    <string name="mi_carrito">Mi Carrito</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="buscador">Buscador</string>
    <string name="pizza">Pizza</string>
    <string name="sinfunci_n">sinFunción</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="imagenfondo">imagenfondo</string>
    <string name="botonmycart">botonMyCart</string>
    <string name="imagenmuestra">imagenMuestra</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="bienvenido_3">Bienvenido:3</string>
    <string name="upiicsa_food">UPIICSA FOOD</string>
    <string name="rating">rating</string>
    <string name="time">Time</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="_120_0">120.0</string>
    <string name="_5_0">5.0</string>
    <string name="descripci_n">Descripción</string>
    <string name="precio">Precio</string>
    <string name="ordene_ahora">Ordene Ahora :)</string>
    <string name="desayuno2">DESAYUNO</string>
    <string name="star">star</string>
    <string name="albondigas">Albondigas</string>
    <string name="tarjeta_de_producto">Tarjeta de producto</string>
    <string name="comida_deliciosa_descripci_n_descripcion">COMIDA DELICIOSA DESCRIPCIÓN DESCRIPCION</string>
    <string name="ver_m_s">VER MÁS</string>
    <string name="tu_comida_favorita_se_encuentra_aqui">TU COMIDA FAVORITA SE ENCUENTRA AQUI</string>
    <string name="navegaci_n_de_pesta_as">Navegación de pestañas</string>
    <string name="segundo_fragmento">Segundo Fragmento</string>
    <string name="tercer_fragmento">Tercer Fragmento</string>
    <string name="producto">Producto</string>
    <string name="min_35">Min -35$</string>
    <string name="_180">180</string>
    <string name="usuario">Usuario</string>
    <string name="art_culos">Artículos</string>
</resources>