<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bottom_sheet_bg"
    >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/ordene_ahora"
        android:textColor="@color/vino"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <LinearLayout
        android:id="@+id/ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/bottom_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coffe"
            app:riv_corner_radius="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detalles_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:singleLine="true"
                android:text="@string/descripci_n"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/imagenmuestra"
                    android:src="@drawable/start" />

                <TextView
                    android:id="@+id/bottom_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/rating"
                    android:text="@string/_5_0"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/time"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:id="@+id/bottom_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/time"
                    android:text="@string/_10_00_7_00"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/precio"
                    android:src="@drawable/dollarsymbol"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_500"
                    tools:ignore="MissingConstraints,ImageContrastCheck" />

                <TextView
                    android:id="@+id/bottom_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120_0"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/añadir_carrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/a_adir_al_carrito"
                    android:background="@drawable/btn_bg_design2"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                     />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>