<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detalles_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/coffe"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/detalles_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detalles_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/descripci_n"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                >
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/start"
                    android:contentDescription="@string/star"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:id="@+id/detalles_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_0"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/time"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_baseline_access_time_24"/>

                <TextView
                    android:id="@+id/detalles_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/_10_00_7_00"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/precio"
                    android:src="@drawable/dollarsymbol"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_500" />

                <TextView
                    android:id="@+id/detalles_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120_0"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/a_adir_al_carrito"
                    android:background="@drawable/btn_bg_design2"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>